--- a/gb/10/6/21/n2944311.md
+++ b/gb/10/6/21/n2944311.md
@@ -1,12 +1,13 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/dcixww301/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/dcixww301/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/dcixww301/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/dcixww301/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/dcixww301/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/dcixww301/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/dcixww301/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/dcixww301/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/dcixww301/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/dcixww301/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/dcixww301/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/dcixww301/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/dcixww301/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/dcixww301/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/dcixww301/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/dcixww301/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/dcixww301/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/dcixww301/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/dcixww301/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/dcixww301/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/dcixww301/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/dcixww301/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/dcixww301/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/dcixww301/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/dcixww301/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/dcixww301/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/dcixww301/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/dcixww301/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/dcixww301/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/dcixww301/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/dcixww301/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/dcixww301/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/dcixww301/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/dcixww301/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/dcixww301/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/dcixww301/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/dcixww301/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/dcixww301/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/dcixww301/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/dcixww301/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/dcixww301/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/dcixww301/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/dcixww301/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/dcixww301/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/dcixww301/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/dcixww301/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/dcixww301/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/kobfyi3602/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/kobfyi3602/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/kobfyi3602/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>中国约有一亿新生代农民工 近八成未婚</h2>
-
-<h6></h6>
+<img width="600" src="https://i.epochtimes.com/assets/uploads/2010/06/1006211052221657.jpg" />
+<h6>中国上亿农民工，时常面临拿不到薪水的窘境。图为安徽合肥一个建筑工地上的工人。（Getty Images）
+</h6>
 <hr>
-	<p>【大纪元6月21日讯】一份调查报告称，中国现阶段新生代<ahref="https://github.com/dcixww301/djy/blob/master/gb/tag/%E5%86%9C%E6%B0%91%E5%B7%A5.md#1">农民工</a>约1亿，其中80%未婚，低收入高房价成阻碍其生存最大障碍。此外，劳动合同签订率低、欠薪时有发生、工伤事故和职业病发生率高等劳动权益受损问题，亟须解决。报告建议剥离附加户口社会福利，推广居住证制度。</p>
-<p>新生代<ahref="https://github.com/dcixww301/djy/blob/master/gb/tag/%E5%86%9C%E6%B0%91%E5%B7%A5.md#1">农民工</a>系指出生于20世纪80年代以后，年龄在16岁以上，在异地以非农就业为主的农业户籍人口。</p>
+	<p>【大纪元6月21日讯】一份调查报告称，中国现阶段新生代<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E5%86%9C%E6%B0%91%E5%B7%A5.md#1">农民工</a>约1亿，其中80%未婚，低收入高房价成阻碍其生存最大障碍。此外，劳动合同签订率低、欠薪时有发生、工伤事故和职业病发生率高等劳动权益受损问题，亟须解决。报告建议剥离附加户口社会福利，推广居住证制度。</p>
+<p>新生代<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E5%86%9C%E6%B0%91%E5%B7%A5.md#1">农民工</a>系指出生于20世纪80年代以后，年龄在16岁以上，在异地以非农就业为主的农业户籍人口。</p>
 <p>《工人日报》21日全文刊登全国总工会新生代农民工问题课题组《关于新生代农民工问题的研究报告》。报告称，中国现阶段新生代农民工总数约在1亿人左右，其中已婚者仅占20%左右。</p>
 <p>国家统计局数据显示，2009年，全国农民工总量为2.3亿人，外出农民工数量为1.5亿人，其中，16岁-30岁的占61.6%1。据此推算，2009年外出新生代农民工数量在8900万左右，如果将8445万就地转移农民工中的新生代群体考虑进来，中国现阶段新生代农民工总数约在1亿人左右。</p>
 <p>这表明，新生代农民工在中国2.3亿(2008年为2.25亿)职工中，已经占将近一半。</p>
@@ -19,41 +20,35 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/dcixww301/djy/blob/master/gb/10/5/21/n2915008.md#1">中国GDP背后农民工的代价</a></li>
-<li><a href="https://github.com/dcixww301/djy/blob/master/gb/10/5/25/n2918018.md#1">廖祖笙：惨不忍闻的“新中国”</a></li>
-<li><a href="https://github.com/dcixww301/djy/blob/master/gb/10/5/29/n2922445.md#1">【热点互动】“农二代”用自杀演绎绝望</a></li>
-<li><a href="https://github.com/dcixww301/djy/blob/master/gb/10/5/30/n2923165.md#1">廖祖笙：全总马后炮和空炮齐放</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/10/5/21/n2915008.md#1">中国GDP背后农民工的代价</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/10/5/25/n2918018.md#1">廖祖笙：惨不忍闻的“新中国”</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/10/5/29/n2922445.md#1">【热点互动】“农二代”用自杀演绎绝望</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/10/5/30/n2923165.md#1">廖祖笙：全总马后炮和空炮齐放</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank">中共的伪火骗局</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/2/18/n10154324.md#1" target="_blank">杨宁：中共大年期间洗脑国人始于延安时期</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/11/27/n8533521.md#1" target="_blank">勤修炼 英文老师丢了药罐子</a></li>
+<li><a href="https://github.com/ychojm359/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank">加拿大总理的贺信</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/10/28/n10813474.md#1" target="_blank">大饥荒是中共有计划的屠杀手段（上）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/10/n11248618.md#1" target="_blank">救母何惧强暴 正义存于人心</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/dcixww301/djy/blob/master/gb/21/8/17/n13169214.md#1">【未解之谜】被神选中的大师们</a></li>
-<li><a href="https://github.com/dcixww301/djy/blob/master/gb/21/8/15/n13163984.md#1">【馨香雅句】你喜欢的颜色吸引哪种能量</a></li>
-<li><a href="https://github.com/dcixww301/djy/blob/master/gb/21/7/24/n13112860.md#1">她从婴儿的哭声中 听到了家族灭亡的命运</a></li>
-<li><a href="https://github.com/dcixww301/djy/blob/master/gb/21/7/23/n13108843.md#1">【命理】一个人做了坏事欠债可以不还吗？</a></li>
-<li><a href="https://github.com/dcixww301/djy/blob/master/gb/21/8/13/n13161080.md#1">【未解之谜】我的前世  是安妮?弗兰克</a></li>
-<li><a href="https://github.com/dcixww301/djy/blob/master/gb/21/8/19/n13173490.md#1">【珍言真语】专家谈制裁对香港金融业影响</a></li>
-<li><a href="https://github.com/dcixww301/djy/blob/master/gb/21/8/21/n13178623.md#1">【财商天下】共同富裕 “合法”抢劫</a></li>
-<li><a href="https://github.com/dcixww301/djy/blob/master/gb/21/8/21/n13177664.md#1">【珍言真语】曾焯文：美超级电脑助查病毒源</a></li>
-<li><a href="https://github.com/dcixww301/djy/blob/master/gb/21/8/20/n13176564.md#1">中共急叫停香港《反外国制裁法》学者解析</a></li>
-<li><a href="https://github.com/dcixww301/djy/blob/master/gb/21/8/20/n13176128.md#1">塔利班枪杀德媒体记者家人 德派2直升机救人</a></li>
-<li><a href="https://github.com/dcixww301/djy/blob/master/gb/21/8/20/n13175206.md#1">日本海底火山喷发 冒出新的马蹄形小岛</a></li>
-<li><a href="https://github.com/dcixww301/djy/blob/master/gb/21/8/20/n13176794.md#1">自曝践行断食法十多年 古天乐每日只吃一餐</a></li>
-<li><a href="https://github.com/dcixww301/djy/blob/master/gb/21/8/20/n13175770.md#1">《斯卡罗》演员查马克病逝 长子获奖献亡父</a></li>
-<li><a href="https://github.com/dcixww301/djy/blob/master/gb/21/8/18/n13170824.md#1">2021金曲奖完整得奖名单 华语歌后田馥甄胜出</a></li>
-<li><a href="https://github.com/dcixww301/djy/blob/master/gb/21/8/20/n13176911.md#1">赴大陆工作突挂急诊 杨丞琳晒病房照自嘲</a></li>
-<li><a href="https://github.com/dcixww301/djy/blob/master/gb/21/8/20/n13175649.md#1">法比欧拍对手戏被激怒 吴慷仁卑微求生陷两难</a></li>
-<li><a href="https://github.com/dcixww301/djy/blob/master/gb/21/8/20/n13175206.md#1">日本海底火山喷发 冒出新的马蹄形小岛</a></li>
-<li><a href="https://github.com/dcixww301/djy/blob/master/gb/21/8/20/n13175719.md#1">日本食品业禁止员工早餐吃纳豆 原因曝光</a></li>
-<li><a href="https://github.com/dcixww301/djy/blob/master/gb/21/8/20/n13176265.md#1">芝士蛋糕块口感顺滑 制作简单 便于携带</a></li>
-<li><a href="https://github.com/dcixww301/djy/blob/master/gb/21/8/20/n13175453.md#1">15种“最干净蔬果” 第一名你经常吃</a></li>
-<li><a href="https://github.com/dcixww301/djy/blob/master/gb/21/8/19/n13173542.md#1">无需大学学位就可以胜任的六类职业</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/21/n11961699.md#1">追责中共隐瞒疫情 国际专家提六大方案</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/21/n11962082.md#1">【最新疫情3.22】川普启动三州国民警卫队</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/22/n11962341.md#1">对北京掩盖疫情失望 川普：中共非常诡秘</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/22/n11962674.md#1">意大利口罩被谁买空？意媒驳中共救援谎言</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/22/n11963263.md#1">【一线采访】武汉市民：对政府彻底失望</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/23/n11965271.md#1">刘真惊传病逝 留下4岁女儿 享年44岁　</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/22/n11963031.md#1">胞弟成为台湾女婿 瑞莎曝婚礼照喊开心</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/20/n11959416.md#1">众星遭陆“限籍令”点名 台湾艺人揭中共套路</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/23/n11966011.md#1">刘真44岁辞世 演艺圈好友不舍</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/21/n11962008.md#1">好莱坞制作人瓦特染疫：身体像被巴士撞到</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/2/n11909598.md#1">【命理】长寿的命怎样看？</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/11/n11933384.md#1">断臂僧转世？小蛮童有胆 向康熙帝要官职</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/17/n11945807.md#1">2020 否极泰来</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/22/n11964127.md#1">后悔或是一味良药 但须在大限前</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/21/n11961878.md#1">【历史回眸】人们忘记神 这就是一切的起因</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/dcixww301/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/dcixww301/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/10/6/21/n2944311.htm">中国约有一亿新生代农民工 近八成未婚</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/kobfyi3602/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/kobfyi3602/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/10/6/21/n2944311.htm">中国约有一亿新生代农民工 近八成未婚</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/dcixww301/djy/blob/master/gb/10/6/21/n2944311.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/dcixww301/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dcixww301/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/dcixww301/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/dcixww301/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/dcixww301/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dcixww301/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/dcixww301/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dcixww301/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/dcixww301/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dcixww301/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/dcixww301/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dcixww301/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/dcixww301/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dcixww301/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/dcixww301/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dcixww301/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/dcixww301/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dcixww301/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/dcixww301/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dcixww301/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/dcixww301/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dcixww301/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/dcixww301/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dcixww301/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/dcixww301/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dcixww301/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/dcixww301/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dcixww301/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/dcixww301/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dcixww301/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/dcixww301/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dcixww301/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/dcixww301/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dcixww301/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/dcixww301/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dcixww301/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/dcixww301/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dcixww301/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/dcixww301/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dcixww301/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/dcixww301/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dcixww301/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/dcixww301/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dcixww301/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/dcixww301/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dcixww301/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/dcixww301/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dcixww301/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/kobfyi3602/djy/blob/master/gb/10/6/21/n2944311.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/kobfyi3602/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/kobfyi3602/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
